src/test/deca/syntax/valid/parser/oracle/expr_with_some_equals.deca
{
  int i = 0;
  int j;
  i = j = 2;
  i = j = z = w;
}
