src/test/deca/syntax/invalid/test_dir/added/parser/decl_between_instr.deca
{
  i = 5;
  int i;
  j = 3+3;
 }
